Scrollbar issues resolved

--- a/src/Components/Toggles/Toggles.module.css
+++ b/src/Components/Toggles/Toggles.module.css
@@ -24,6 +24,7 @@
     transition-delay: 1s;
 	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
     padding: 5px;
+    overflow-y: auto;
 }
 
 .img {
